--- a/.classpath
+++ b/.classpath
@@ -13,12 +13,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
-		<attributes>
-			<attribute name="module" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
@@ -26,13 +20,13 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/tnuzum/eclipse-workspace/i4_FrontDesk/src/main/java/Selenium/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tnuzum/eclipse-workspace/i4_FrontDesk/src/main/java/Selenium/client-combined-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tnuzum/eclipse-workspace/i4_FrontDesk/src/main/java/Selenium/client-combined-3.141.59-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tnuzum/eclipse-workspace/i4_FrontDesk/src/main/java/Selenium/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tnuzum/eclipse-workspace/i4_FrontDesk/src/main/java/Selenium/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tnuzum/eclipse-workspace/i4_FrontDesk/src/main/java/Selenium/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tnuzum/eclipse-workspace/i4_FrontDesk/src/main/java/Selenium/okio-1.14.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tnuzum/eclipse-workspace/i4_FrontDesk/src/main/java/Selenium/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sdandekar/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sdandekar/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sdandekar/selenium-java-3.141.59/libs/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sdandekar/selenium-java-3.141.59/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sdandekar/selenium-java-3.141.59/libs/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sdandekar/selenium-java-3.141.59/libs/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sdandekar/selenium-java-3.141.59/libs/okio-1.14.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/CDC-1.0%Foundation-1.0"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
