--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,109 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
+    <profiles>
+        <profile>
+            <id>i4TestEnvironment</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/java/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
 
+ 
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M4</version>
+                        <!-- version>2.20</version -->
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>testng.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+                            <forkCount>1</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <parallel>tests</parallel>
+                            <threadCount>2</threadCount>
+                            <printSummary>true</printSummary>
+                            <!--properties>
+                                <property>
+                                    <name>testnames</name>
+                                    <value>i4 - POS, Appt Admin, Reports, member manager, JOL Ui Validations</value>
+                                </property>
+                            </properties-->
+
+ 
+
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.1</version>
+                        <configuration>
+                            <source>11</source>
+                            <target>11</target>
+                        </configuration>
+                    </plugin>
+                </plugins>
+
+ 
+
+            </build>
+        </profile>
+        
+        <profile>
+          <id>i4ProdEnv</id>
+          <build>
+          <resources>
+            <resource>
+               <directory>src/main/java/resources</directory>
+               <filtering>true</filtering>
+
+            </resource>
+
+         </resources>
+    <plugins>
+      <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-surefire-plugin</artifactId>
+           <version>3.0.0-M4</version>
+           <!-- version>2.20</version -->
+      <configuration>
+         <suiteXmlFiles>
+          <suiteXmlFile>testngProd.xml</suiteXmlFile>
+...
+         </suiteXmlFiles>
+             <forkCount>1</forkCount>
+             <reuseForks>true</reuseForks>
+             <parallel>tests</parallel>
+             <threadCount>2</threadCount>
+             <printSummary>true</printSummary>
+
+       </configuration>
+
+     </plugin>
+    <plugin>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.8.1</version>
+        <configuration>
+        <source>11</source>
+         <target>11</target>
+
+        </configuration>
+
+    </plugin>
+
+    </plugins>
+
+   </build>
+
+ </profile>
+        
+</profiles>
 	<build>
 		<resources>
 			<resource>
@@ -45,10 +147,9 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	
 	<dependencies>
-
-
-
 
 		<dependency>
 			<groupId>org.apache.maven</groupId>
